driver/tests/snap/parse_error/pi_lambda_missing_annotation/0_input.splic
// ERROR: lambda without type annotation should fail
def apply(f: fn(_: u64) -> u64, x: u64) -> u64 = {
    f(x)
};

def test() -> u64 = {
    apply(lam(x) = x + 1, 42)
};
